--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,6 +64,7 @@ $responsiveType: 1;
 // Стилі тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 
 body {
+   background: #f5f5f5;
 	// Скролл заблоковано
 	.lock & {
 		overflow: hidden;
@@ -81,6 +82,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+   // background: #f5f5f5;
 	@supports (overflow: clip) {
 		overflow: clip;
 	}
