--- a/src/scss/home-02.scss
+++ b/src/scss/home-02.scss
@@ -147,34 +147,53 @@
 
 //========================================================================================================================================================
 //====================================================================================================
-.why-use-02 {
+// info
+//========================================================================================================================================================
+//========================================================================================================================================================
+.service-5 {
    @include adaptiveValue("padding-top", 96, 50);
    @include adaptiveValue("padding-bottom", 152, 50);
+   @media (max-width: $mobile) {
+      padding-bottom: 0;
+   }
    background: #f5f5f5;
    color: #000;
-   // .why-use-02__container
+   // background: #817c7c;
+   // .service__container
    &__container {
       max-width: rem(1208);
-   }
-   // .why-use-02__content
-   &__content {
-      display: flex;
-      justify-content: space-between;
-      gap: rem(10);
-      @media (max-width: $tablet) {
-         flex-direction: column;
+      @media (min-width: $mobile) {
+         min-height: 100%;
+         display: flex;
+         align-items: center;
+         column-gap: rem(12);
       }
    }
-   // .why-use-02__box
+   // .service__why-use-03
+   &__info {
+   }
+   // .service__pictureseseses
+   &__pictures {
+   }
+}
+
+.info-2 {
+   // .why-use-03__content
+   &__content {
+   }
+   // .why-use-03__box
    &__box {
       flex: 0 1 47.1%;
       max-width: rem(569);
       @media (max-width: $tablet) {
          flex: 0 1 100%;
-         max-width: 100%;
+         // max-width: 100%;
+      }
+      @media (max-width: $mobile) {
+         margin-bottom: rem(25);
       }
    }
-   // .why-use-02__subtitle
+   // .info__subtitle
    &__subtitle {
       position: relative;
       font-family: "Roboto";
@@ -193,7 +212,7 @@
          bottom: rem(-32);
       }
    }
-   // .why-use-02__title
+   // .info__title
    &__title {
       font-family: "Roboto";
       font-weight: 700;
@@ -206,7 +225,7 @@
          margin-bottom: rem(17);
       }
    }
-   // .why-use-02__text
+   // .info__text
    &__text {
       font-family: "Roboto";
       font-weight: 300;
@@ -221,68 +240,238 @@
          }
       }
    }
-   // .why-use-02__images
-   &__images {
-      display: flex;
-      padding-top: rem(36);
-      flex: 0 1 51.9%;
-      max-width: rem(627);
-      height: 100%;
-      // position: relative;
-      // z-index: 2;
-      @media (max-width: $tablet) {
-         flex: 0 1 100%;
-         max-width: 100%;
-      }
-   }
-   // .why-use-02__image
-   &__image {
-      display: flex;
+}
+
+.pictur {
+   position: relative;
+   max-width: rem(604);
+   // background: #798a76;
+   // .pictur__image-big
+   &__image-big {
       width: 100%;
-      justify-content: end;
-      padding-left: rem(115);
-      position: relative;
-      img {
-         max-width: 100%;
-         height: 100%;
-      }
-      @media (max-width: $tablet) {
-         flex: 0 1 100%;
-         padding: 0;
-         // justify-content: center;
-         // max-width: rem(700);
-         // width: 100%;
+      opacity: 0.52;
+      @media (min-width: $mobile) {
+         flex: 0 1 50%;
+         position: relative;
+         max-width: rem(604);
+         width: 100%;
+         // right: 12px;
+         @include adaptiveValue("right", -130, -12);
          img {
-            max-width: rem(700);
             width: 100%;
+            //width: 84.561404%; /* 482/570 */
+         }
+      }
+      @media (max-width: $mobile) {
+         flex: 0 1 100%;
+         max-width: rem(768);
+         position: relative;
+         @include adaptiveValue("right", -350, -20);
+         img {
+            width: 100%;
+            object-fit: cover;
          }
       }
    }
-   // .why-use-02__image-small
+   // .pictur__image-small
    &__image-small {
-      position: absolute;
-      content: "";
-      left: 0%;
-      bottom: -17%;
-      transform: translate(0, 17%);
-      img {
-         max-width: 100%;
-         height: 100%;
-      }
-      @media (max-width: $tablet) {
-         flex: 0 1 100%;
-         max-width: rem(317);
-         width: 100%;
+      // background: #D9D9D9;
+      // opacity: 0.52;
+      // position: relative;
+      @media (max-width: $mobile) {
+         // flex: 0 1 100%;
+         max-width: rem(274);
+         @include adaptiveValue("max-width", 274, 130);
+         // position: absolute;
+         // padding-left: rem(15);
+         // @include adaptiveValue("right", -420, 15);
+         // height: auto;
+         left: 0%;
+         top: 50%;
+         transform: translate(-50%, -50%);
+         // object-fit: cover;
          img {
             width: 100%;
+            object-fit: cover;
          }
-         left: 10%;
+      }
+      @media (min-width: $mobile) {
+         flex-basis: rem(232);
+         position: absolute;
+         width: 100%;
+         height: auto;
+         left: -25%;
          bottom: -17%;
-         transform: translate(-10, 17%);
-         z-index: 0;
+         transform: translate(0, 17%);
+         object-fit: cover;
+         img {
+            width: 100%;
+            max-width: rem(232); /* 439/482 */
+            @include adaptiveValue(" max-width", 232, 157);
+            // padding-left: rem(25);
+            @include adaptiveValue("padding-left", 0, 35);
+         }
       }
    }
 }
+
+/* ------------------------------------ */
+.pictures {
+   position: relative;
+   max-width: rem(570);
+   // .pictures__image-big
+   &__image-big {
+      border-left: 25px solid #d9d9da;
+      max-width: rem(570);
+      width: 100%;
+      img {
+         // max-width: 100%;
+      }
+      @media (min-width: $mobile) {
+         flex: 0 1 50%;
+         position: relative;
+         max-width: rem(570);
+         width: 100%;
+         @include adaptiveValue("right", -279, -15);
+         img {
+            width: 100%;
+            //width: 84.561404%; /* 482/570 */
+         }
+      }
+      @media (max-width: $mobile) {
+         flex: 0 1 100%;
+         max-width: rem(370);
+         position: relative;
+         @include adaptiveValue("right", -520, -20);
+         img {
+            width: 100%;
+            object-fit: cover;
+         }
+      }
+   }
+   // .pictures__image-small
+   &__image-small {
+      position: relative;
+      @media (max-width: $mobile) {
+         flex: 0 1 100%;
+         max-width: rem(370);
+         position: absolute;
+         padding-left: rem(15);
+         @include adaptiveValue("right", -420, 15);
+         height: auto;
+         left: 0%;
+         top: 50%;
+         transform: translate(-50%, -50%);
+         object-fit: cover;
+         img {
+            width: 100%;
+            object-fit: cover;
+         }
+      }
+      @media (min-width: $mobile) {
+         flex-basis: rem(439);
+         position: absolute;
+         width: 100%;
+         height: auto;
+         left: 0%;
+         top: 50%;
+         transform: translate(-50%, -50%);
+         object-fit: cover;
+         img {
+            width: 100%;
+            max-width: 439px; /* 439/482 */
+            padding-left: rem(25);
+         }
+      }
+   }
+   // .pictures__text
+   &__pictures {
+   }
+   // .pictures__item
+   &__item {
+      display: flex;
+      align-items: center;
+      padding: rem(10) rem(0) rem(10) rem(14);
+      background: #fff;
+      // max-width: rem(212);
+      @include adaptiveValue("max-width", 212, 180);
+      width: 100%;
+      border-radius: rem(6);
+      box-shadow: 1px 7px 22px rgba(0, 0, 0, 0.1);
+      // .pictures__item_01
+      &_01 {
+         position: absolute;
+         left: -12%;
+         top: 20%;
+         transform: translate(-50%, -20%);
+         @media (max-width: $mobile) {
+            left: 10%;
+         }
+      }
+      // .pictures__item_01
+      &_02 {
+         position: absolute;
+         left: 50%;
+         top: 0;
+         transform: translate(-50%, -50%);
+         @media (max-width: rem(1100)) {
+            left: 40%;
+         }
+         @media (max-width: $mobile) {
+            left: 50%;
+         }
+      }
+      // .pictures__item_01
+      &_03 {
+         position: absolute;
+         position: absolute;
+         left: 50%;
+         bottom: -4%;
+         transform: translate(-50%, 4%);
+         @media (max-width: rem(1100)) {
+            left: 40%;
+         }
+         @media (max-width: $mobile) {
+            left: 50%;
+         }
+      }
+   }
+   // .pictures__image-ibg
+   &__image-ibg {
+      width: rem(41);
+      height: rem(41);
+      border-radius: 50%;
+      margin-right: rem(12);
+      img {
+         width: 100%;
+         border-radius: 50%;
+         object-fit: cover;
+      }
+   }
+   // .pictures__info
+   &__info {
+   }
+   // .pictures__name
+   &__name {
+      font-weight: 700;
+      font-size: rem(14);
+      line-height: 133.02%;
+      &:not(:last-child) {
+         margin-bottom: rem(3);
+      }
+   }
+   // .pictures__rating
+   &__rating {
+      font-size: rem(12);
+      line-height: 133.02%;
+      color: rgba(41, 41, 41, 0.4);
+      span {
+         color: #ff7500;
+      }
+   }
+}
+
+//========================================================================================================================================================
 
 //========================================================================================================================================================
 //====================================================================================================
